# sushi-batch

./: .gitignore  LICENSE  README.md  Settings.md  SushiBatchTool.py  console_utils.py  enums.py  fd.py  file_dialogs.py  file_formats.py  files.py  job.py  job_manager.py  job_queue.py  json_hooks.py  mkv_merge.py  pyproject.toml  queue_data.py  queue_manager.py  requirements.txt  settings.py  streams.py  sub_shift.py  sub_sync.py  sushi_batch.py
sushi_batch/: __main__.py  console_utils.py  enums.py  ffmpeg.py  file_dialogs.py  files.py  job.py  job_queue.py  json_hooks.py  mkv_merge.py  queue_manager.py  settings.py  streams.py  sub_resample.py  sub_sync.py  subprocess_logger.py  utils.py
sushi_batch/models/: enums.py  job.py  job_queue.py  settings.py  stream.py  streams.py
sushi_batch/models/job/: audio_sync_job.py  base_job.py  video_sync_job.py
sushi_batch/persistence/: queue_persistence.py
sushi_batch/services/: job_creation_service.py  job_stream_selection_service.py  queue_execution_service.py  stream_service.py
sushi_batch/ui/: codec_bitrates_config_menu.py  encode_codec_settings_menu.py  file_dialogs.py  help_menu.py  job_create_menu.py  main_menu.py  pairings_review_dialog.py  queue_manager.py  queue_themes.py  settings_menu.py  sushi_advanced_args_menu.py
sushi_batch/ui/prompts/: checklist_dialog.py  choice_prompt.py  confirm_prompt.py  input_prompt.py
sushi_batch/ui/queue/: main_queue.py  queue_manager.py  queue_themes.py  temp_queue.py
sushi_batch/ui/settings/: encode_codec_settings_menu.py  settings_menu.py  sushi_advanced_args_menu.py
sushi_batch/utils/: console_utils.py  constants.py  file_utils.py  json_utils.py  queue_manager.py  queue_themes.py  utils.py
sushi_batch/utils/json/: settings_json.py
sushi_batch/utils/prompts/: checklist_dialog.py  choice_prompt.py  confirm_prompt.py  input_prompt.py
