[tool.poetry]
name = "sushi-batch"
version = "0.2.0"
description = "Batch Subtitle Synchronization Tool"
authors = ["C1fer"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/C1fer/sushi-batch"
packages = [
    { include = "sushi_batch" }
]
keywords = ["subtitle", "sync"]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Programming Language :: Python :: 3.13',
    'Topic :: Multimedia :: Sound/Audio',
    'Topic :: Text Processing',
]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
art = "^6.1"
colorama = "^0.4.6"
prettytable = "^3.9.0"
sushi-sub-next = "^0.6.3"
yaspin = "^3.0.1"
pyqt6 = "^6.5.2"

[tool.poetry.scripts]
sushi-batch="sushi_batch.__main__:main"
sushi_batch="sushi_batch.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
