[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "sushi-batch"
version = "0.3.0"
description = "Batch Subtitle Synchronization Tool"
readme = "README.md"
requires-python = ">=3.13,<4.0"
license = { text = "MIT" }
authors = [{ name = "C1fer" }]
keywords = ["subtitle", "sync"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Text Processing",
]
dependencies = [
    "art>=6.1,<7",
    "colorama>=0.4.6,<0.5",
    "prettytable>=3.9.0,<4",
    "sushi-sub-next>=0.6.4,<0.7",
    "yaspin>=3.0.1,<4",
    "pyqt6>=6.5.2,<7",
]

[project.urls]
Repository = "https://github.com/C1fer/sushi-batch"

[project.scripts]
sushi-batch = "sushi_batch.__main__:main"
sushi_batch = "sushi_batch.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["sushi_batch"]
